src/test/run-pass/pred-check.rs
// -*- rust -*-
pure fn f(q: int) -> bool { ret true; }

fn main() { let x = 0; check (f(x)); }
